<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.foodiefinder.mobile</groupId>
    <artifactId>foodiefinder-mobile-automation</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>

        <appium-java.version>7.6.0</appium-java.version>
        <selenium.version>3.141.59</selenium.version>
        <lombok.version>1.18.10</lombok.version>
        <selenium.remote.version>3.141.59</selenium.remote.version>
        <testng.version>7.6.1</testng.version>
        <log4j.version>1.2.17</log4j.version>
        <assertj-core.version>3.10.0</assertj-core.version>
        <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
        <java.version>12</java.version>
        <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
        <maven.surfire.plugin.version>2.22.0</maven.surfire.plugin.version>
        <aspectj.version>1.9.4</aspectj.version>
        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
        <allure.version>2.19.0</allure.version>

    </properties>
    <dependencies>
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>${appium-java.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <fork>true</fork>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resources.plugin.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <configuration>
                    <workingDirectory>${project.basedir}</workingDirectory>
                    <parallel>classes</parallel>
                    <threadCount>3</threadCount>
                    <systemPropertyVariables>
                        <project.base.dir>${project.basedir}</project.base.dir>
                        <!--suppress UnresolvedMavenProperty -->
                        <appium.url>${appiumUrl}</appium.url>
                        <!--suppress UnresolvedMavenProperty -->
                        <devise.isSimulator>${simulator}</devise.isSimulator>
                    </systemPropertyVariables>
                    <suiteXmlFiles>
                        <!--suppress UnresolvedMavenProperty -->
                        <file>${testng.xml.file}</file>
                    </suiteXmlFiles>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                    </argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <!--This goal makes the build fail if you have test failures-->
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
